<resources>
    <string name="app_name">Yes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Поиск</string>
    <string name="share">Поделиться</string>
    <string name="refresh">Обновить</string>
    <string name="overflow">Дополнительные опции</string>
    <string name="navigation">Навигация</string>
    <string name="reviews">Отзывы</string>
    <string name="novelty">Новинки</string>
    <string name="profile">Профиль</string>
    <string name="users">Пользователи</string>
    <string name="categories">Категории</string>
    <string name="rating">Рейтинг</string>
    <string name="discussions">Обсуждения</string>
    <string name="reservation">Бронь</string>
    <string name="about_prog">О программе</string>
    <string name="nearby">Рядом</string>
    <string name="favorites">Избранное</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_novelty_adapter">NoveltyAdapter</string>
    <string name="email">E-mail</string>
    <string name="login_email">Логин или e-mail</string>
    <string name="password">Пароль</string>
    <string name="code">Код</string>
    <string name="enter_code">Введите код</string>
    <string name="refresh_image">Обновить изображение</string>
    <string name="forget_pswd">Забыли пароль?</string>
    <string name="recall">Напомнить</string>
    <string name="registration">Регистрация</string>
    <string name="entry">Вход</string>
    <string name="status">Статус</string>
    <string name="gender">Пол</string>
    <string name="reg_gender">Ваш пол</string>
    <string name="male">м</string>
    <string name="female">ж</string>
    <string name="birthday">Дата \nрождения</string>
    <string name="city">Город</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="login">Логин или номер телефона</string>
    <string name="reg_password">Пароль (7 или более символов)</string>
    <string name="security">Защита</string>
    <string name="address">Адрес доставки</string>
    <string name="repeat_pswd">Подтвердите пароль</string>
    <string name="mail">Адрес эл. почты</string>
    <string name="show_history">Показать друзьям историю покупок</string>
    <string name="show_recomendations">Показать друзьям рекомендации товаров и услуг</string>
    <string name="agreement">Нажимая кнопку "Зарегистрироваться", я подтверждаю свою дееспособность и даю согласие на обработку своих персональных данных</string>
    <string name="register">Зарегистрироваться</string>
    <string name="region">Регион</string>
    <string name="choose_country">Выберите страну</string>
    <string name="choose_city">Выберите город</string>
    <string name="any">Любой</string>
    <string name="age">Возраст</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="choose_male">Мужской</string>
    <string name="choose_female">Женский</string>
    <string name="novelty_info">&gt;&gt; К информации о товарах и сервисных услугах</string>
    <string name="search_param">Параметры поиска</string>
    <string name="search_hint">Я ищу...</string>
    <string name="log_out">Выход</string>
    <string name="settings">Настройки</string>
    <string name="save">Сохранить</string>
    <string name="accept_request">Запрос принят</string>
    <string name="decline_request">Запрос отклонен</string>
    <string-array name="country_array">
        <item>Выберите страну</item>
        <item>Азербайджан</item>
        <item>Армения</item>
        <item>Белоруссия</item>
        <item>Казахстан</item>
        <item>Киргизия</item>
        <item>Молдавия</item>
        <item>Россия</item>
        <item>Таджикистан</item>
        <item>Туркмения</item>
        <item>Узбекистан</item>
        <item>Украина</item>
    </string-array>
    <string-array name="city_default">
        <item>Выберите город</item>
    </string-array>
    <string-array name="city_azerbaijan">
        <item>Выберите город</item>
        <item>Агдам</item>
        <item>Агдаш</item>
        <item>Агджабеди</item>
        <item>Аджикабул</item>
        <item>Акстафа</item>
        <item>Али-Байрамлы</item>
        <item>Астара</item>
        <item>Ахсу</item>
        <item>Барда</item>
        <item>Бейлаган</item>
        <item>Белокань</item>
        <item>Биласувар</item>
        <item>Габала</item>
        <item>Геокчай</item>
        <item>Геранбой</item>
        <item>Гобустан</item>
        <item>Гузанли</item>
        <item>Гусары</item>
        <item>Гянджа</item>
        <item>Дашкесан</item>
        <item>Джалилабад</item>
        <item>Дивичи</item>
        <item>Евлах</item>
        <item>Закаталы</item>
        <item>Зардоб</item>
        <item>Имишли</item>
        <item>Исмайллы</item>
        <item>Казах</item>
        <item>Кахи</item>
        <item>Кедабек</item>
        <item>Кельбаджары</item>
        <item>Куба</item>
        <item>Кюрдамир</item>
        <item>Лачин</item>
        <item>Ленкорань</item>
        <item>Лерик</item>
        <item>Масаллы</item>
        <item>Мингечаур</item>
        <item>Нафталан</item>
        <item>Нахичевань</item>
        <item>Нефтечала</item>
        <item>Огуз</item>
        <item>Саатлы</item>
        <item>Сабирабад</item>
        <item>Сальяны</item>
        <item>Самух</item>
        <item>Сиазань</item>
        <item>Сумгаит</item>
        <item>Тауз</item>
        <item>Тер-Тер</item>
        <item>Уджары</item>
        <item>Физули</item>
        <item>Ханкенди</item>
        <item>Ханлар</item>
        <item>Хачмас</item>
        <item>Хызы</item>
        <item>Шамкир</item>
        <item>Шеки</item>
        <item>Шемаха</item>
        <item>Шуша</item>
    </string-array>
    <string-array name="city_armenia">
        <item>Выберите город</item>
        <item>Абовян</item>
        <item>Алаверди</item>
        <item>Алапарс</item>
        <item>Амасия</item>
        <item>Ани</item>
        <item>Апаран</item>
        <item>Арапи</item>
        <item>Арарат</item>
        <item>Аргел</item>
        <item>Аревшат</item>
        <item>Армавир</item>
        <item>Арташат</item>
        <item>Артик</item>
        <item>Ахурян</item>
        <item>Ашотск</item>
        <item>Аштарак</item>
        <item>Баграмян</item>
        <item>Берд</item>
        <item>Ваагни</item>
        <item>Вайк</item>
        <item>Ванадзор</item>
        <item>Варденис</item>
        <item>Веди</item>
        <item>Гавар</item>
        <item>Горис</item>
        <item>Гюмри</item>
        <item>Даларик</item>
        <item>Джермук</item>
        <item>Дзорагет</item>
        <item>Дилижан</item>
        <item>Егвард</item>
        <item>Егегнут</item>
        <item>Ереван</item>
        <item>Ехегнадзор</item>
        <item>Зовуни</item>
        <item>Золак</item>
        <item>Иджеван</item>
        <item>Каджаран</item>
        <item>Камо</item>
        <item>Капан</item>
        <item>Каракерд</item>
        <item>Кохб</item>
        <item>Лермонтов</item>
        <item>Маралик</item>
        <item>Маргаовит</item>
        <item>Мартуни</item>
        <item>Масис</item>
        <item>Меградзор</item>
        <item>Мегри</item>
        <item>Мецамор</item>
        <item>Мясникян</item>
        <item>Нагорный Карабах</item>
        <item>Ноемберян</item>
        <item>Нор-Ачн</item>
        <item>Нор-Гехи</item>
        <item>Памбак</item>
        <item>Пемзашен</item>
        <item>Птгни</item>
        <item>Пюник</item>
        <item>Раздан</item>
        <item>Сарнахпюр</item>
        <item>Сарухан</item>
        <item>Севан</item>
        <item>Сисиан</item>
        <item>Спитак</item>
        <item>Степанаван</item>
        <item>Ташир</item>
        <item>Цахкадзор</item>
        <item>Цахкаовит</item>
        <item>Чамбарак</item>
        <item>Чаренцаван</item>
        <item>Ширакаван</item>
        <item>Эчмиадзин</item>
    </string-array>
    <string-array name="city_byelorussia">
        <item>Выберите город</item>
        <item>Бобруйск</item>
        <item>Барановичи</item>
        <item>Борисов</item>
        <item>Барань</item>
        <item>Белоозерск</item>
        <item>Береза</item>
        <item>Березино</item>
        <item>Березовка</item>
        <item>Браслав</item>
        <item>Брест</item>
        <item>Буда-Кошелево</item>
        <item>Быхов</item>
        <item>Василевичи</item>
        <item>Верхнедвинск</item>
        <item>Ветка</item>
        <item>Вилейка</item>
        <item>Витебск</item>
        <item>Волковыск</item>
        <item>Воложин</item>
        <item>Высокое</item>
        <item>Ганцевичи</item>
        <item>Глубокое</item>
        <item>Гомель</item>
        <item>Горки</item>
        <item>Городок</item>
        <item>Гродно</item>
        <item>Давид-Городок</item>
        <item>Дзержинск</item>
        <item>Дисна</item>
        <item>Добруш</item>
        <item>Докшицы</item>
        <item>Дрогичин</item>
        <item>Дубровно</item>
        <item>Дятлово</item>
        <item>Ельск</item>
        <item>Жодино</item>
        <item>Жабинка</item>
        <item>Житковичи</item>
        <item>Жлобин</item>
        <item>Заславль</item>
        <item>Иваново</item>
        <item>Ивацевичи</item>
        <item>Ивье</item>
        <item>Калинковичи</item>
        <item>Каменец</item>
        <item>Кировск</item>
        <item>Клецк</item>
        <item>Климовичи</item>
        <item>Кличев</item>
        <item>Кобрин</item>
        <item>Копыль</item>
        <item>Коссово</item>
        <item>Костюковичи</item>
        <item>Кричев</item>
        <item>Крупки</item>
        <item>Лепель</item>
        <item>Лида</item>
        <item>Логойск</item>
        <item>Лунинец</item>
        <item>Любань</item>
        <item>Ляховичи</item>
        <item>Мозырь</item>
        <item>Малорита</item>
        <item>Марьина Горка</item>
        <item>Микашевичи</item>
        <item>Минск</item>
        <item>Миоры</item>
        <item>Могилев</item>
        <item>Молодечно</item>
        <item>Мосты</item>
        <item>Мстиславль</item>
        <item>Мядель</item>
        <item>Новополоцк</item>
        <item>Наровля</item>
        <item>Несвиж</item>
        <item>Новогрудок</item>
        <item>Новолукомль</item>
        <item>Орша</item>
        <item>Осиповичи</item>
        <item>Ошмяны</item>
        <item>Пинск</item>
        <item>Полоцк</item>
        <item>Петриков</item>
        <item>Поставы</item>
        <item>Пружаны</item>
        <item>Речица</item>
        <item>Рогачев</item>
        <item>Светлогорск</item>
        <item>Свислочь</item>
        <item>Сенно</item>
        <item>Скидель</item>
        <item>Славгород</item>
        <item>Слоним</item>
        <item>Слуцк</item>
        <item>Смолевичи</item>
        <item>Сморгонь</item>
        <item>Солигорск</item>
        <item>Старые Дороги</item>
        <item>Столбцы</item>
        <item>Столин</item>
        <item>Толочин</item>
        <item>Туров</item>
        <item>Узда</item>
        <item>Фаниполь</item>
        <item>Хойники</item>
        <item>Чаусы</item>
        <item>Чашники</item>
        <item>Червень</item>
        <item>Чериков</item>
        <item>Чечерс</item>
        <item>Шклов</item>
        <item>Щучин</item>
    </string-array>
</resources>