<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context="com.tataev.yes.Registration"
    android:background="@drawable/reg_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageRegLogo"
        android:src="@drawable/reg_logo"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/regLayout"
        android:layout_margin="5dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/regLayout"
        android:background="@android:color/white"
        android:layout_margin="5dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editRegLogin"
            android:hint="@string/login"
            android:inputType="phone|textPersonName"
            android:background="@drawable/profile_border"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editRegPswrd"
            android:hint="@string/reg_password"
            android:inputType="textPassword"
            android:background="@drawable/profile_border"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editRegConPswrd"
            android:hint="@string/repeat_pswd"
            android:inputType="textPassword"
            android:background="@drawable/profile_border"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editRegEmail"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:background="@drawable/profile_border"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/profile_text" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_history"
            android:id="@+id/checkBoxShowHistory"
            android:layout_margin="5dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_recomendations"
            android:id="@+id/checkShowRecom"
            android:layout_margin="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/profile_text" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:id="@+id/checkBoxConfReg"
            android:layout_margin="5dp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/buttonReg"
        android:layout_below="@+id/regLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp" />
</RelativeLayout>